--- a/pr-agent.yml
+++ b/pr-agent.yml
@@ -16,16 +16,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup PR Agent environment and run
-        env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          config__git_provider: github
-          github__token: ${{ secrets.MY_GITHUB_TOKEN }}
-          openai__key: ${{ secrets.OPENAI_KEY }}
-          openai__api_base: ${{ secrets.OPENAI_API_BASE }}
+      - name: Setup PR Agent environment
         run: |
           echo "Running PR Agent on GitHub PR"
+          export PR_URL="${{ github.event.pull_request.html_url }}"
           echo "PR_URL=$PR_URL"
+          
+          export config__git_provider="github"
+          export github__token="${{ secrets.MY_GITHUB_TOKEN }}"   
+          export openai__key="${{ secrets.OPENAI_KEY }}"
+          export openai__api_base="${{ secrets.OPENAI_API_BASE }}"
 
           python -m pr_agent.cli --pr_url="$PR_URL" describe --openai.api_base=$openai__api_base
           python -m pr_agent.cli --pr_url="$PR_URL" review -i --openai.api_base=$openai__api_base
