--- a/pr-agent.yml
+++ b/pr-agent.yml
@@ -6,24 +6,25 @@ on:
 
 jobs:
   run-pr-agent:
-    runs-on: self-hosted  # 👈 Chạy trên self-hosted runner bạn vừa cài
+    runs-on: self-hosted
 
     container:
       image: anhdt8490/pr-ai-agent:latest
-      options: --entrypoint ""
+      options: --entrypoint ""  # Đảm bảo không bị override lệnh mặc định
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up environment variables
+        run: |
+          echo "PR_URL=${{ github.event.pull_request.html_url }}" >> $GITHUB_ENV
+          echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
+          echo "OPENAI_KEY=${{ secrets.OPENAI_KEY }}" >> $GITHUB_ENV
+          echo "OPENAI_API_BASE=${{ secrets.OPENAI_API_BASE }}" >> $GITHUB_ENV
+
       - name: Run PR Agent
         run: |
-          export PR_URL="${{ github.event.pull_request.html_url }}"
-          export config__git_provider="github"
-          export github__token="${{ secrets.GITHUB_TOKEN }}"
-          export openai__key="${{ secrets.OPENAI_KEY }}"
-          export openai__api_base="${{ secrets.OPENAI_API_BASE }}"
-
           python -m pr_agent.cli --pr_url="$PR_URL" describe
           python -m pr_agent.cli --pr_url="$PR_URL" review -i
           python -m pr_agent.cli --pr_url="$PR_URL" improve
